--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Ask For Date</title>
+    <title> do u wanna be my firend </title>
   </head>
   <body>
     <img src="assets/date.png" alt="date?" class="header-img" />
@@ -17,3 +17,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
